--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,3 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "printWidth": 120,
-  "singleQuote": true,
-  "tabWidth": 2
+  "singleQuote": true
 }
