feat(chore): Bump versions

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -24,6 +24,8 @@
         "command": "node tools/scripts/publish.mjs core {args.ver} {args.tag}"
       },
       "dependsOn": [
+        "test",
+        "lint",
         "build"
       ]
     },
