--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "15.6.3",
-    "@nrwl/js": "15.6.3",
-    "@nrwl/linter": "15.6.3",
-    "@nrwl/workspace": "15.6.3",
-    "@types/jest": "28.1.1",
+    "@nrwl/eslint-plugin-nx": "16.8.1",
+    "@nrwl/jest": "16.8.1",
+    "@nrwl/js": "16.8.1",
+    "@nrwl/linter": "16.8.1",
+    "@nrwl/workspace": "16.8.1",
+    "@types/jest": "29.4.4",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "~8.15.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "eslint": "8.46.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "nx": "15.6.3",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "nx": "16.8.1",
     "prettier": "^2.6.2",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "5.1.6"
   }
 }
 
