--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@nrwl/eslint-plugin-nx": "18.3.2",
     "@nrwl/jest": "18.3.2",
     "@nx/js": "18.3.2",
-    "@nrwl/linter": "18.3.2",
-    "@nrwl/workspace": "18.3.2",
+    "@nx/vite": "18.3.2",
+    "@nx/linter": "18.3.2",
+    "@nx/workspace": "18.3.2",
     "@types/jest": "29.4.4",
     "@types/node": "18.19.31",
     "@typescript-eslint/eslint-plugin": "7.7.0",
