feat(chore): From scratch #2

--- a/package.json
+++ b/package.json
@@ -3,18 +3,34 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
-  "private": true,
+  "private": false,
   "devDependencies": {
     "@nx/eslint": "^18.3.2",
+    "@nx/eslint-plugin": "18.3.2",
     "@nx/js": "18.3.2",
     "@nx/vite": "^18.3.2",
     "@nx/web": "18.3.2",
     "@nx/workspace": "18.3.2",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
     "nx": "18.3.2",
+    "prettier": "^2.6.2",
+    "typescript": "~5.4.2",
+    "verdaccio": "^5.0.4",
     "vite": "~5.0.0",
+    "vite-plugin-dts": "~3.8.1",
     "vitest": "^1.3.1"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "nx": {
+    "includedScripts": []
+  }
 }
