feat(chore): From scratch #3

--- a/nx.json
+++ b/nx.json
@@ -37,6 +37,7 @@
     }
   },
   "release": {
+    "projects": ["packages/*"],
     "version": {
       "preVersionCommand": "npx nx run-many -t build"
     }
