--- a/packages/state-machine/package.json
+++ b/packages/state-machine/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@powwow-js/state-machine",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.1",
   "dependencies": {},
   "main": "./index.js",
